Rectify and rename usages of stack variable to stackName